--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -18,6 +18,7 @@ body {
     color: white;
     background: linear-gradient(130deg, rgb(86, 86, 235), rgb(5, 5, 199));
 }
+/* weather.css */
 
 .search {
     display: flex;
@@ -39,13 +40,23 @@ body {
 .search button {
     border: none;
     outline: 0;
-    width: 50px;
-    height: 50px;
+    width: 40px; /* Adjusted width for the icon */
+    height: 40px; /* Adjusted height for the icon */
     border-radius: 50%;
     cursor: pointer;
-    background-color: #007bff;
-    color: white;
+    background-color: blueviolet;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.search button i {
+    font-size: 10px; /* Icon size */
+}
+*/
+
+
 
 .winfo-icon {
     margin-top: 20px;
@@ -83,8 +94,10 @@ body {
     margin: 0px;
 }
 .error{
-    color:rgb(238, 85, 85);
+    color: red; /* Change to any color you prefer */
+    font-weight: bold;
+    
     text-align: left;
-    margin-top: 10px;
+    margin-right: 10px;
 
 }
